# wp-specs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
_gal/: work.gxl
src/: lib.rs  pattern.rs
tests/: pattern_wildarray.rs
