[package]
name = "wp-specs"
version = "0.1.0"
edition = "2024"
license = "Elastic-2.0"
description = "Ultra-light shared specs for WordPress Labs connectors and plugins"
readme = "README.md"
repository = "https://github.com/wp-labs/wp-specs"
homepage = "https://github.com/wp-labs/wp-specs"
documentation = "https://docs.rs/wp-specs"
keywords = ["wp-labs", "specs", "config", "serde", "wildcard"]
categories = ["config", "data-structures"]

[dependencies]
log = "0.4"
toml = "0.9"
orion-error = "0.5"
winnow = "0.7"
derive_more = "2.1"
wp-connector-api =  "0.7"
wp-model-core    =  "0.7"

serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
wildmatch = "2.6"
